--- a/TODO
+++ b/TODO
@@ -2,13 +2,18 @@
  TODO: nabu
 ============
 
+- add config notes
+
 - how are *~ backup files dealt with
 
 - add to dump command: ability to dump contents like the page
-
-  - if there is an id
+  - automatically if there is an id as an argument
+    (cmdline remains simple)
 
 - remove all traces of the document
+
+- add option not to upload the source
+
 
 
 :server:
