--- a/README
+++ b/README
@@ -1,18 +1,18 @@
-====================================
-  nabu: Personal Publishing System
-====================================
+========================================
+  nabu: An Text File Publishing System
+========================================
 
-.. contents:: Table of Contents
-
-
-Description
-===========
+.. contents::
+..
 
    "Nabu is the Babylonian god of wisdom and writing, worshipped by
    Babylonians as the son of Marduk and his consort, Sarpanitum, and as
    the grandson of Ea."
-                      ---From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_
 
+   ---From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_
+
+Description
+===========
 
 Nabu is a system for allowing users to easily create large amounts of
 relevant information and publish this information in a semantically
@@ -87,7 +87,9 @@ framework that can access an SQL database.
 Documentation
 =============
 
-- `Design and Proposal <doc/design.txt>`_
+- `Usage <doc/nabu-usage.html>`_
+- `Goals <doc/nabu-goals.html>`_
+- `Ideas <doc/nabu-ideas.html>`_
 
 Components
 ----------
@@ -105,7 +107,7 @@ Nabu Server
    files it has processed, and makes the necessary updates.  The content is
    stored in a database after having been parsed.
 
-Nabu Web Application
+Presenter / Web Application
    Uses the content stored on the database by the server, and provides a web
    front to the data by providing various services, like a blog, an addressbook,
    etc.  It also provides a web application with users, and various levels of
