--- a/README
+++ b/README
@@ -9,7 +9,7 @@
    Babylonians as the son of Marduk and his consort, Sarpanitum, and as
    the grandson of Ea."
 
-   ---From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_
+   ---(From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_)
 
 Description
 ===========
