--- a/README
+++ b/README
@@ -86,6 +86,8 @@ Documentation
 - `Ideas <doc/nabu-ideas.html>`_: unorganized file with random ideas (this is my
   work file);
 
+- `Design <doc/nabu-design.html>`_: design concepts.
+
 Components
 ----------
 
