--- a/TODO
+++ b/TODO
@@ -3,13 +3,8 @@
 ============
 
 :client:
-- finish dump command: ability to dump contents like the page
-
 - add a command to return the list of transforms that the server supports,
   (these are simply the docstrings of the configured transforms, concatenated)
-
-
-
 
 - remove all traces of the Document class in the server.py code
 
@@ -22,8 +17,6 @@
 
 
 :publisher:
-- make sure that the errors format can be processed by emacs
-
 - setup automated publish on commit using
   - CVS
   - Subversion
@@ -161,6 +154,21 @@ Rejected or Indefinitely-postponed Ideas
   - find out how to programmatically add columns to the database
 
   Do this later, when I have a good demonstration of nicely extracted stuff.
+
+- per-user document sets:
+
+  Right now, the way the Nabu servers are implemented, you can see, dump and
+  overwrite the contents of other users [#]_.
+  
+  _ [#]. It would be possible to implement per-user document sets by combining the
+         unique id with the username to form the new unique id.  This requires
+         some changes on the server.
+
+  Do this at some point.
+
+  This has important consequences if the users are pushing documents from a
+  shared body of source texts.
+
 
 
 Docutils Questions
